parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Program Declaration
Rule 2     Program -> Declaration
Rule 3     Declaration -> VariableDeclaration
Rule 4     Declaration -> FunctionDeclaration
Rule 5     Declaration -> ClassDeclaration
Rule 6     Declaration -> InterfaceDeclaration
Rule 7     VariableDeclaration -> Variable SEMICOLON
Rule 8     Variable -> Type ID
Rule 9     Type -> INT
Rule 10    Type -> DOUBLE
Rule 11    Type -> BOOLEAN
Rule 12    Type -> STRING
Rule 13    Type -> Type LEFTBRACKET RIGHTBRACKET
Rule 14    Type -> ID
Rule 15    FunctionDeclaration -> Type ID LEFTPAREN Formals RIGHTPAREN StatementBlock
Rule 16    FunctionDeclaration -> VOID ID LEFTPAREN Formals RIGHTPAREN StatementBlock
Rule 17    Formals -> VariableList
Rule 18    Formals -> empty
Rule 19    VariableList -> Variable COMMA VariableList
Rule 20    VariableList -> Variable
Rule 21    ClassDeclaration -> CLASS ID ClassOptions LEFTBRACE FieldKleene RIGHTBRACE
Rule 22    ClassOptions -> EXTENDS ID
Rule 23    ClassOptions -> IMPLEMENTS IdList
Rule 24    ClassOptions -> EXTENDS ID IMPLEMENTS IdList
Rule 25    ClassOptions -> empty
Rule 26    IdList -> ID COMMA IdList
Rule 27    IdList -> ID
Rule 28    FieldKleene -> Field FieldKleene
Rule 29    FieldKleene -> empty
Rule 30    Field -> VariableDeclaration
Rule 31    Field -> FunctionDeclaration
Rule 32    InterfaceDeclaration -> INTERFACE ID LEFTBRACE PrototypeKleene RIGHTBRACE
Rule 33    PrototypeKleene -> Prototype PrototypeKleene
Rule 34    PrototypeKleene -> empty
Rule 35    Prototype -> Type ID LEFTPAREN Formals RIGHTPAREN SEMICOLON
Rule 36    Prototype -> VOID ID LEFTPAREN Formals RIGHTPAREN SEMICOLON
Rule 37    StatementBlock -> LEFTBRACE VaribleDeclarationKleene StatementKleene RIGHTBRACE
Rule 38    VaribleDeclarationKleene -> VariableDeclaration VaribleDeclarationKleene
Rule 39    VaribleDeclarationKleene -> empty
Rule 40    StatementKleene -> Statement StatementKleene
Rule 41    StatementKleene -> empty
Rule 42    Statement -> Expression SEMICOLON
Rule 43    Statement -> SEMICOLON
Rule 44    Statement -> IfStatement
Rule 45    Statement -> WhileStatement
Rule 46    Statement -> ForStatement
Rule 47    Statement -> BreakStatement
Rule 48    Statement -> ReturnStatement
Rule 49    Statement -> PrintStatement
Rule 50    Statement -> StatementBlock
Rule 51    IfStatement -> IF LEFTPAREN Expression RIGHTPAREN Statement OptionalElse
Rule 52    OptionalElse -> ELSE Statement
Rule 53    OptionalElse -> empty
Rule 54    WhileStatement -> WHILE LEFTPAREN Expression RIGHTPAREN Statement
Rule 55    ForStatement -> FOR LEFTPAREN OptionalExpression SEMICOLON Expression SEMICOLON OptionalExpression RIGHTPAREN Statement
Rule 56    OptionalExpression -> Expression
Rule 57    OptionalExpression -> empty
Rule 58    BreakStatement -> BREAK SEMICOLON
Rule 59    ReturnStatement -> RETURN OptionalExpression SEMICOLON
Rule 60    PrintStatement -> PRINTLN LEFTPAREN ExpressionList RIGHTPAREN SEMICOLON
Rule 61    ExpressionList -> Expression COMMA ExpressionList
Rule 62    ExpressionList -> Expression
Rule 63    Expression -> LVal ASSIGNOP Expression
Rule 64    Expression -> Constant
Rule 65    Expression -> LVal
Rule 66    Expression -> THIS
Rule 67    Expression -> Call
Rule 68    Expression -> LEFTPAREN Expression RIGHTPAREN
Rule 69    Expression -> UminusExpression
Rule 70    Expression -> Expression ArithmaticOperator Expression
Rule 71    Expression -> Expression CompareOperator Expression
Rule 72    Expression -> Expression LogicalOperator Expression
Rule 73    Expression -> NOT Expression
Rule 74    Expression -> READLN LEFTPAREN RIGHTPAREN
Rule 75    Expression -> NEW LEFTPAREN ID RIGHTPAREN
Rule 76    Expression -> NEWARRAY LEFTPAREN INTCONSTANT COMMA Type RIGHTPAREN
Rule 77    UminusExpression -> MINUS Expression
Rule 78    ArithmaticOperator -> PLUS
Rule 79    ArithmaticOperator -> MINUS
Rule 80    ArithmaticOperator -> MULTIPLICATION
Rule 81    ArithmaticOperator -> DIVISION
Rule 82    ArithmaticOperator -> MOD
Rule 83    CompareOperator -> LESS
Rule 84    CompareOperator -> LESSEQUAL
Rule 85    CompareOperator -> GREATER
Rule 86    CompareOperator -> GREATEREQUAL
Rule 87    CompareOperator -> EQUAL
Rule 88    CompareOperator -> NOTEQUAL
Rule 89    LogicalOperator -> AND
Rule 90    LogicalOperator -> OR
Rule 91    LVal -> ID
Rule 92    LVal -> LVal LEFTBRACKET Expression RIGHTBRACKET
Rule 93    LVal -> LVal PERIOD ID
Rule 94    Call -> ID LEFTPAREN Actuals RIGHTPAREN
Rule 95    Call -> ID PERIOD ID LEFTPAREN Actuals RIGHTPAREN
Rule 96    Actuals -> ExpressionList
Rule 97    Actuals -> empty
Rule 98    Constant -> INTCONSTANT
Rule 99    Constant -> DOUBLECONSTANT
Rule 100   Constant -> STRINGCONSTANT
Rule 101   Constant -> BOOLEANCONSTANT
Rule 102   Constant -> NULL
Rule 103   empty -> <empty>

Terminals, with rules where they appear

AND                  : 89
ASSIGNOP             : 63
BOOLEAN              : 11
BOOLEANCONSTANT      : 101
BREAK                : 58
CLASS                : 21
COMMA                : 19 26 61 76
DIVISION             : 81
DOUBLE               : 10
DOUBLECONSTANT       : 99
ELSE                 : 52
EQUAL                : 87
EXTENDS              : 22 24
FOR                  : 55
GREATER              : 85
GREATEREQUAL         : 86
ID                   : 8 14 15 16 21 22 24 26 27 32 35 36 75 91 93 94 95 95
IF                   : 51
IMPLEMENTS           : 23 24
INT                  : 9
INTCONSTANT          : 76 98
INTERFACE            : 32
LEFTBRACE            : 21 32 37
LEFTBRACKET          : 13 92
LEFTPAREN            : 15 16 35 36 51 54 55 60 68 74 75 76 94 95
LESS                 : 83
LESSEQUAL            : 84
MINUS                : 77 79
MOD                  : 82
MULTIPLICATION       : 80
NEW                  : 75
NEWARRAY             : 76
NOT                  : 73
NOTEQUAL             : 88
NULL                 : 102
OR                   : 90
PERIOD               : 93 95
PLUS                 : 78
PRINTLN              : 60
READLN               : 74
RETURN               : 59
RIGHTBRACE           : 21 32 37
RIGHTBRACKET         : 13 92
RIGHTPAREN           : 15 16 35 36 51 54 55 60 68 74 75 76 94 95
SEMICOLON            : 7 35 36 42 43 55 55 58 59 60
STRING               : 12
STRINGCONSTANT       : 100
THIS                 : 66
VOID                 : 16 36
WHILE                : 54
error                : 

Nonterminals, with rules where they appear

Actuals              : 94 95
ArithmaticOperator   : 70
BreakStatement       : 47
Call                 : 67
ClassDeclaration     : 5
ClassOptions         : 21
CompareOperator      : 71
Constant             : 64
Declaration          : 1 2
Expression           : 42 51 54 55 56 61 62 63 68 70 70 71 71 72 72 73 77 92
ExpressionList       : 60 61 96
Field                : 28
FieldKleene          : 21 28
ForStatement         : 46
Formals              : 15 16 35 36
FunctionDeclaration  : 4 31
IdList               : 23 24 26
IfStatement          : 44
InterfaceDeclaration : 6
LVal                 : 63 65 92 93
LogicalOperator      : 72
OptionalElse         : 51
OptionalExpression   : 55 55 59
PrintStatement       : 49
Program              : 1 0
Prototype            : 33
PrototypeKleene      : 32 33
ReturnStatement      : 48
Statement            : 40 51 52 54 55
StatementBlock       : 15 16 50
StatementKleene      : 37 40
Type                 : 8 13 15 35 76
UminusExpression     : 69
Variable             : 7 19 20
VariableDeclaration  : 3 30 38
VariableList         : 17 19
VaribleDeclarationKleene : 37 38
WhileStatement       : 45
empty                : 18 25 29 34 39 41 53 57 97

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Program Declaration
    (2) Program -> . Declaration
    (3) Declaration -> . VariableDeclaration
    (4) Declaration -> . FunctionDeclaration
    (5) Declaration -> . ClassDeclaration
    (6) Declaration -> . InterfaceDeclaration
    (7) VariableDeclaration -> . Variable SEMICOLON
    (15) FunctionDeclaration -> . Type ID LEFTPAREN Formals RIGHTPAREN StatementBlock
    (16) FunctionDeclaration -> . VOID ID LEFTPAREN Formals RIGHTPAREN StatementBlock
    (21) ClassDeclaration -> . CLASS ID ClassOptions LEFTBRACE FieldKleene RIGHTBRACE
    (32) InterfaceDeclaration -> . INTERFACE ID LEFTBRACE PrototypeKleene RIGHTBRACE
    (8) Variable -> . Type ID
    (9) Type -> . INT
    (10) Type -> . DOUBLE
    (11) Type -> . BOOLEAN
    (12) Type -> . STRING
    (13) Type -> . Type LEFTBRACKET RIGHTBRACKET
    (14) Type -> . ID

    VOID            shift and go to state 10
    CLASS           shift and go to state 11
    INTERFACE       shift and go to state 12
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    BOOLEAN         shift and go to state 15
    STRING          shift and go to state 16
    ID              shift and go to state 9

    Program                        shift and go to state 1
    Declaration                    shift and go to state 2
    VariableDeclaration            shift and go to state 3
    FunctionDeclaration            shift and go to state 4
    ClassDeclaration               shift and go to state 5
    InterfaceDeclaration           shift and go to state 6
    Variable                       shift and go to state 7
    Type                           shift and go to state 8

state 1

    (0) S' -> Program .
    (1) Program -> Program . Declaration
    (3) Declaration -> . VariableDeclaration
    (4) Declaration -> . FunctionDeclaration
    (5) Declaration -> . ClassDeclaration
    (6) Declaration -> . InterfaceDeclaration
    (7) VariableDeclaration -> . Variable SEMICOLON
    (15) FunctionDeclaration -> . Type ID LEFTPAREN Formals RIGHTPAREN StatementBlock
    (16) FunctionDeclaration -> . VOID ID LEFTPAREN Formals RIGHTPAREN StatementBlock
    (21) ClassDeclaration -> . CLASS ID ClassOptions LEFTBRACE FieldKleene RIGHTBRACE
    (32) InterfaceDeclaration -> . INTERFACE ID LEFTBRACE PrototypeKleene RIGHTBRACE
    (8) Variable -> . Type ID
    (9) Type -> . INT
    (10) Type -> . DOUBLE
    (11) Type -> . BOOLEAN
    (12) Type -> . STRING
    (13) Type -> . Type LEFTBRACKET RIGHTBRACKET
    (14) Type -> . ID

    VOID            shift and go to state 10
    CLASS           shift and go to state 11
    INTERFACE       shift and go to state 12
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    BOOLEAN         shift and go to state 15
    STRING          shift and go to state 16
    ID              shift and go to state 9

    Declaration                    shift and go to state 17
    VariableDeclaration            shift and go to state 3
    FunctionDeclaration            shift and go to state 4
    ClassDeclaration               shift and go to state 5
    InterfaceDeclaration           shift and go to state 6
    Variable                       shift and go to state 7
    Type                           shift and go to state 8

state 2

    (2) Program -> Declaration .

    VOID            reduce using rule 2 (Program -> Declaration .)
    CLASS           reduce using rule 2 (Program -> Declaration .)
    INTERFACE       reduce using rule 2 (Program -> Declaration .)
    INT             reduce using rule 2 (Program -> Declaration .)
    DOUBLE          reduce using rule 2 (Program -> Declaration .)
    BOOLEAN         reduce using rule 2 (Program -> Declaration .)
    STRING          reduce using rule 2 (Program -> Declaration .)
    ID              reduce using rule 2 (Program -> Declaration .)
    $end            reduce using rule 2 (Program -> Declaration .)


state 3

    (3) Declaration -> VariableDeclaration .

    VOID            reduce using rule 3 (Declaration -> VariableDeclaration .)
    CLASS           reduce using rule 3 (Declaration -> VariableDeclaration .)
    INTERFACE       reduce using rule 3 (Declaration -> VariableDeclaration .)
    INT             reduce using rule 3 (Declaration -> VariableDeclaration .)
    DOUBLE          reduce using rule 3 (Declaration -> VariableDeclaration .)
    BOOLEAN         reduce using rule 3 (Declaration -> VariableDeclaration .)
    STRING          reduce using rule 3 (Declaration -> VariableDeclaration .)
    ID              reduce using rule 3 (Declaration -> VariableDeclaration .)
    $end            reduce using rule 3 (Declaration -> VariableDeclaration .)


state 4

    (4) Declaration -> FunctionDeclaration .

    VOID            reduce using rule 4 (Declaration -> FunctionDeclaration .)
    CLASS           reduce using rule 4 (Declaration -> FunctionDeclaration .)
    INTERFACE       reduce using rule 4 (Declaration -> FunctionDeclaration .)
    INT             reduce using rule 4 (Declaration -> FunctionDeclaration .)
    DOUBLE          reduce using rule 4 (Declaration -> FunctionDeclaration .)
    BOOLEAN         reduce using rule 4 (Declaration -> FunctionDeclaration .)
    STRING          reduce using rule 4 (Declaration -> FunctionDeclaration .)
    ID              reduce using rule 4 (Declaration -> FunctionDeclaration .)
    $end            reduce using rule 4 (Declaration -> FunctionDeclaration .)


state 5

    (5) Declaration -> ClassDeclaration .

    VOID            reduce using rule 5 (Declaration -> ClassDeclaration .)
    CLASS           reduce using rule 5 (Declaration -> ClassDeclaration .)
    INTERFACE       reduce using rule 5 (Declaration -> ClassDeclaration .)
    INT             reduce using rule 5 (Declaration -> ClassDeclaration .)
    DOUBLE          reduce using rule 5 (Declaration -> ClassDeclaration .)
    BOOLEAN         reduce using rule 5 (Declaration -> ClassDeclaration .)
    STRING          reduce using rule 5 (Declaration -> ClassDeclaration .)
    ID              reduce using rule 5 (Declaration -> ClassDeclaration .)
    $end            reduce using rule 5 (Declaration -> ClassDeclaration .)


state 6

    (6) Declaration -> InterfaceDeclaration .

    VOID            reduce using rule 6 (Declaration -> InterfaceDeclaration .)
    CLASS           reduce using rule 6 (Declaration -> InterfaceDeclaration .)
    INTERFACE       reduce using rule 6 (Declaration -> InterfaceDeclaration .)
    INT             reduce using rule 6 (Declaration -> InterfaceDeclaration .)
    DOUBLE          reduce using rule 6 (Declaration -> InterfaceDeclaration .)
    BOOLEAN         reduce using rule 6 (Declaration -> InterfaceDeclaration .)
    STRING          reduce using rule 6 (Declaration -> InterfaceDeclaration .)
    ID              reduce using rule 6 (Declaration -> InterfaceDeclaration .)
    $end            reduce using rule 6 (Declaration -> InterfaceDeclaration .)


state 7

    (7) VariableDeclaration -> Variable . SEMICOLON

    SEMICOLON       shift and go to state 18


state 8

    (15) FunctionDeclaration -> Type . ID LEFTPAREN Formals RIGHTPAREN StatementBlock
    (8) Variable -> Type . ID
    (13) Type -> Type . LEFTBRACKET RIGHTBRACKET

    ID              shift and go to state 19
    LEFTBRACKET     shift and go to state 20


state 9

    (14) Type -> ID .

    ID              reduce using rule 14 (Type -> ID .)
    LEFTBRACKET     reduce using rule 14 (Type -> ID .)
    RIGHTPAREN      reduce using rule 14 (Type -> ID .)


state 10

    (16) FunctionDeclaration -> VOID . ID LEFTPAREN Formals RIGHTPAREN StatementBlock

    ID              shift and go to state 21


state 11

    (21) ClassDeclaration -> CLASS . ID ClassOptions LEFTBRACE FieldKleene RIGHTBRACE

    ID              shift and go to state 22


state 12

    (32) InterfaceDeclaration -> INTERFACE . ID LEFTBRACE PrototypeKleene RIGHTBRACE

    ID              shift and go to state 23


state 13

    (9) Type -> INT .

    ID              reduce using rule 9 (Type -> INT .)
    LEFTBRACKET     reduce using rule 9 (Type -> INT .)
    RIGHTPAREN      reduce using rule 9 (Type -> INT .)


state 14

    (10) Type -> DOUBLE .

    ID              reduce using rule 10 (Type -> DOUBLE .)
    LEFTBRACKET     reduce using rule 10 (Type -> DOUBLE .)
    RIGHTPAREN      reduce using rule 10 (Type -> DOUBLE .)


state 15

    (11) Type -> BOOLEAN .

    ID              reduce using rule 11 (Type -> BOOLEAN .)
    LEFTBRACKET     reduce using rule 11 (Type -> BOOLEAN .)
    RIGHTPAREN      reduce using rule 11 (Type -> BOOLEAN .)


state 16

    (12) Type -> STRING .

    ID              reduce using rule 12 (Type -> STRING .)
    LEFTBRACKET     reduce using rule 12 (Type -> STRING .)
    RIGHTPAREN      reduce using rule 12 (Type -> STRING .)


state 17

    (1) Program -> Program Declaration .

    VOID            reduce using rule 1 (Program -> Program Declaration .)
    CLASS           reduce using rule 1 (Program -> Program Declaration .)
    INTERFACE       reduce using rule 1 (Program -> Program Declaration .)
    INT             reduce using rule 1 (Program -> Program Declaration .)
    DOUBLE          reduce using rule 1 (Program -> Program Declaration .)
    BOOLEAN         reduce using rule 1 (Program -> Program Declaration .)
    STRING          reduce using rule 1 (Program -> Program Declaration .)
    ID              reduce using rule 1 (Program -> Program Declaration .)
    $end            reduce using rule 1 (Program -> Program Declaration .)


state 18

    (7) VariableDeclaration -> Variable SEMICOLON .

    VOID            reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    CLASS           reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    INTERFACE       reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    INT             reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    DOUBLE          reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    BOOLEAN         reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    STRING          reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    ID              reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    $end            reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    RIGHTBRACE      reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    SEMICOLON       reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    THIS            reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    LEFTPAREN       reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    NOT             reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    READLN          reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    NEW             reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    NEWARRAY        reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    IF              reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    WHILE           reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    FOR             reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    BREAK           reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    RETURN          reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    PRINTLN         reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    LEFTBRACE       reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    INTCONSTANT     reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    DOUBLECONSTANT  reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    STRINGCONSTANT  reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    BOOLEANCONSTANT reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    NULL            reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)
    MINUS           reduce using rule 7 (VariableDeclaration -> Variable SEMICOLON .)


state 19

    (15) FunctionDeclaration -> Type ID . LEFTPAREN Formals RIGHTPAREN StatementBlock
    (8) Variable -> Type ID .

    LEFTPAREN       shift and go to state 24
    SEMICOLON       reduce using rule 8 (Variable -> Type ID .)


state 20

    (13) Type -> Type LEFTBRACKET . RIGHTBRACKET

    RIGHTBRACKET    shift and go to state 25


state 21

    (16) FunctionDeclaration -> VOID ID . LEFTPAREN Formals RIGHTPAREN StatementBlock

    LEFTPAREN       shift and go to state 26


state 22

    (21) ClassDeclaration -> CLASS ID . ClassOptions LEFTBRACE FieldKleene RIGHTBRACE
    (22) ClassOptions -> . EXTENDS ID
    (23) ClassOptions -> . IMPLEMENTS IdList
    (24) ClassOptions -> . EXTENDS ID IMPLEMENTS IdList
    (25) ClassOptions -> . empty
    (103) empty -> .

    EXTENDS         shift and go to state 28
    IMPLEMENTS      shift and go to state 29
    LEFTBRACE       reduce using rule 103 (empty -> .)

    ClassOptions                   shift and go to state 27
    empty                          shift and go to state 30

state 23

    (32) InterfaceDeclaration -> INTERFACE ID . LEFTBRACE PrototypeKleene RIGHTBRACE

    LEFTBRACE       shift and go to state 31


state 24

    (15) FunctionDeclaration -> Type ID LEFTPAREN . Formals RIGHTPAREN StatementBlock
    (17) Formals -> . VariableList
    (18) Formals -> . empty
    (19) VariableList -> . Variable COMMA VariableList
    (20) VariableList -> . Variable
    (103) empty -> .
    (8) Variable -> . Type ID
    (9) Type -> . INT
    (10) Type -> . DOUBLE
    (11) Type -> . BOOLEAN
    (12) Type -> . STRING
    (13) Type -> . Type LEFTBRACKET RIGHTBRACKET
    (14) Type -> . ID

    RIGHTPAREN      reduce using rule 103 (empty -> .)
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    BOOLEAN         shift and go to state 15
    STRING          shift and go to state 16
    ID              shift and go to state 9

    Type                           shift and go to state 32
    Formals                        shift and go to state 33
    VariableList                   shift and go to state 34
    empty                          shift and go to state 35
    Variable                       shift and go to state 36

state 25

    (13) Type -> Type LEFTBRACKET RIGHTBRACKET .

    ID              reduce using rule 13 (Type -> Type LEFTBRACKET RIGHTBRACKET .)
    LEFTBRACKET     reduce using rule 13 (Type -> Type LEFTBRACKET RIGHTBRACKET .)
    RIGHTPAREN      reduce using rule 13 (Type -> Type LEFTBRACKET RIGHTBRACKET .)


state 26

    (16) FunctionDeclaration -> VOID ID LEFTPAREN . Formals RIGHTPAREN StatementBlock
    (17) Formals -> . VariableList
    (18) Formals -> . empty
    (19) VariableList -> . Variable COMMA VariableList
    (20) VariableList -> . Variable
    (103) empty -> .
    (8) Variable -> . Type ID
    (9) Type -> . INT
    (10) Type -> . DOUBLE
    (11) Type -> . BOOLEAN
    (12) Type -> . STRING
    (13) Type -> . Type LEFTBRACKET RIGHTBRACKET
    (14) Type -> . ID

    RIGHTPAREN      reduce using rule 103 (empty -> .)
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    BOOLEAN         shift and go to state 15
    STRING          shift and go to state 16
    ID              shift and go to state 9

    Formals                        shift and go to state 37
    VariableList                   shift and go to state 34
    empty                          shift and go to state 35
    Variable                       shift and go to state 36
    Type                           shift and go to state 32

state 27

    (21) ClassDeclaration -> CLASS ID ClassOptions . LEFTBRACE FieldKleene RIGHTBRACE

    LEFTBRACE       shift and go to state 38


state 28

    (22) ClassOptions -> EXTENDS . ID
    (24) ClassOptions -> EXTENDS . ID IMPLEMENTS IdList

    ID              shift and go to state 39


state 29

    (23) ClassOptions -> IMPLEMENTS . IdList
    (26) IdList -> . ID COMMA IdList
    (27) IdList -> . ID

    ID              shift and go to state 41

    IdList                         shift and go to state 40

state 30

    (25) ClassOptions -> empty .

    LEFTBRACE       reduce using rule 25 (ClassOptions -> empty .)


state 31

    (32) InterfaceDeclaration -> INTERFACE ID LEFTBRACE . PrototypeKleene RIGHTBRACE
    (33) PrototypeKleene -> . Prototype PrototypeKleene
    (34) PrototypeKleene -> . empty
    (35) Prototype -> . Type ID LEFTPAREN Formals RIGHTPAREN SEMICOLON
    (36) Prototype -> . VOID ID LEFTPAREN Formals RIGHTPAREN SEMICOLON
    (103) empty -> .
    (9) Type -> . INT
    (10) Type -> . DOUBLE
    (11) Type -> . BOOLEAN
    (12) Type -> . STRING
    (13) Type -> . Type LEFTBRACKET RIGHTBRACKET
    (14) Type -> . ID

    VOID            shift and go to state 46
    RIGHTBRACE      reduce using rule 103 (empty -> .)
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    BOOLEAN         shift and go to state 15
    STRING          shift and go to state 16
    ID              shift and go to state 9

    PrototypeKleene                shift and go to state 42
    Prototype                      shift and go to state 43
    empty                          shift and go to state 44
    Type                           shift and go to state 45

state 32

    (8) Variable -> Type . ID
    (13) Type -> Type . LEFTBRACKET RIGHTBRACKET

    ID              shift and go to state 47
    LEFTBRACKET     shift and go to state 20


state 33

    (15) FunctionDeclaration -> Type ID LEFTPAREN Formals . RIGHTPAREN StatementBlock

    RIGHTPAREN      shift and go to state 48


state 34

    (17) Formals -> VariableList .

    RIGHTPAREN      reduce using rule 17 (Formals -> VariableList .)


state 35

    (18) Formals -> empty .

    RIGHTPAREN      reduce using rule 18 (Formals -> empty .)


state 36

    (19) VariableList -> Variable . COMMA VariableList
    (20) VariableList -> Variable .

    COMMA           shift and go to state 49
    RIGHTPAREN      reduce using rule 20 (VariableList -> Variable .)


state 37

    (16) FunctionDeclaration -> VOID ID LEFTPAREN Formals . RIGHTPAREN StatementBlock

    RIGHTPAREN      shift and go to state 50


state 38

    (21) ClassDeclaration -> CLASS ID ClassOptions LEFTBRACE . FieldKleene RIGHTBRACE
    (28) FieldKleene -> . Field FieldKleene
    (29) FieldKleene -> . empty
    (30) Field -> . VariableDeclaration
    (31) Field -> . FunctionDeclaration
    (103) empty -> .
    (7) VariableDeclaration -> . Variable SEMICOLON
    (15) FunctionDeclaration -> . Type ID LEFTPAREN Formals RIGHTPAREN StatementBlock
    (16) FunctionDeclaration -> . VOID ID LEFTPAREN Formals RIGHTPAREN StatementBlock
    (8) Variable -> . Type ID
    (9) Type -> . INT
    (10) Type -> . DOUBLE
    (11) Type -> . BOOLEAN
    (12) Type -> . STRING
    (13) Type -> . Type LEFTBRACKET RIGHTBRACKET
    (14) Type -> . ID

    RIGHTBRACE      reduce using rule 103 (empty -> .)
    VOID            shift and go to state 10
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    BOOLEAN         shift and go to state 15
    STRING          shift and go to state 16
    ID              shift and go to state 9

    FieldKleene                    shift and go to state 51
    Field                          shift and go to state 52
    empty                          shift and go to state 53
    VariableDeclaration            shift and go to state 54
    FunctionDeclaration            shift and go to state 55
    Variable                       shift and go to state 7
    Type                           shift and go to state 8

state 39

    (22) ClassOptions -> EXTENDS ID .
    (24) ClassOptions -> EXTENDS ID . IMPLEMENTS IdList

    LEFTBRACE       reduce using rule 22 (ClassOptions -> EXTENDS ID .)
    IMPLEMENTS      shift and go to state 56


state 40

    (23) ClassOptions -> IMPLEMENTS IdList .

    LEFTBRACE       reduce using rule 23 (ClassOptions -> IMPLEMENTS IdList .)


state 41

    (26) IdList -> ID . COMMA IdList
    (27) IdList -> ID .

    COMMA           shift and go to state 57
    LEFTBRACE       reduce using rule 27 (IdList -> ID .)


state 42

    (32) InterfaceDeclaration -> INTERFACE ID LEFTBRACE PrototypeKleene . RIGHTBRACE

    RIGHTBRACE      shift and go to state 58


state 43

    (33) PrototypeKleene -> Prototype . PrototypeKleene
    (33) PrototypeKleene -> . Prototype PrototypeKleene
    (34) PrototypeKleene -> . empty
    (35) Prototype -> . Type ID LEFTPAREN Formals RIGHTPAREN SEMICOLON
    (36) Prototype -> . VOID ID LEFTPAREN Formals RIGHTPAREN SEMICOLON
    (103) empty -> .
    (9) Type -> . INT
    (10) Type -> . DOUBLE
    (11) Type -> . BOOLEAN
    (12) Type -> . STRING
    (13) Type -> . Type LEFTBRACKET RIGHTBRACKET
    (14) Type -> . ID

    VOID            shift and go to state 46
    RIGHTBRACE      reduce using rule 103 (empty -> .)
    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    BOOLEAN         shift and go to state 15
    STRING          shift and go to state 16
    ID              shift and go to state 9

    Prototype                      shift and go to state 43
    PrototypeKleene                shift and go to state 59
    empty                          shift and go to state 44
    Type                           shift and go to state 45

state 44

    (34) PrototypeKleene -> empty .

    RIGHTBRACE      reduce using rule 34 (PrototypeKleene -> empty .)


state 45

    (35) Prototype -> Type . ID LEFTPAREN Formals RIGHTPAREN SEMICOLON
    (13) Type -> Type . LEFTBRACKET RIGHTBRACKET

    ID              shift and go to state 60
    LEFTBRACKET     shift and go to state 20


state 46

    (36) Prototype -> VOID . ID LEFTPAREN Formals RIGHTPAREN SEMICOLON

    ID              shift and go to state 61


state 47

    (8) Variable -> Type ID .

    COMMA           reduce using rule 8 (Variable -> Type ID .)
    RIGHTPAREN      reduce using rule 8 (Variable -> Type ID .)
    SEMICOLON       reduce using rule 8 (Variable -> Type ID .)


state 48

    (15) FunctionDeclaration -> Type ID LEFTPAREN Formals RIGHTPAREN . StatementBlock
    (37) StatementBlock -> . LEFTBRACE VaribleDeclarationKleene StatementKleene RIGHTBRACE

    LEFTBRACE       shift and go to state 63

    StatementBlock                 shift and go to state 62

state 49

    (19) VariableList -> Variable COMMA . VariableList
    (19) VariableList -> . Variable COMMA VariableList
    (20) VariableList -> . Variable
    (8) Variable -> . Type ID
    (9) Type -> . INT
    (10) Type -> . DOUBLE
    (11) Type -> . BOOLEAN
    (12) Type -> . STRING
    (13) Type -> . Type LEFTBRACKET RIGHTBRACKET
    (14) Type -> . ID

    INT             shift and go to state 13
    DOUBLE          shift and go to state 14
    BOOLEAN         shift and go to state 15
    STRING          shift and go to state 16
    ID              shift and go to state 9

    Variable                       shift and go to state 36
    VariableList                   shift and go to state 64
    Type                           shift and go to state 32

state 50

    (16) FunctionDeclaration -> VOID ID LEFTPAREN Formals RIGHTPAREN . StatementBlock
    (37) StatementBlock -> . LEFTBRACE VaribleDeclarationKleene StatementKleene RIGHTBRACE

    LEFTBRACE       shift and go to state 63

    StatementBlock                 shift and go to state 65

state 51

    (21) ClassDeclaration -> CLASS ID ClassOptions LEFTBRACE FieldKleene . RIGHTBRACE

    RIGHTBRACE      shift and go to state 66


state 52
